# meeting-prep-agent

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: PRD.md  TEST_LOCALLY.md  USE_CASES_AND_OPERATIONS.md
src/: __init__.py  ai_briefer.py  app.py  calendar_client.py  config.py  email_sender.py  event_processor.py  ical_client.py  main.py  meeting_notes.py  meeting_store.py  models.py  outlook_client.py  reference_docs.py  scheduler.py  university_events.py
src/templates/: email_template.html
src/templates/app/: action_items.html  base.html  calendars.html  doc_inline_form.html  doc_tag_form.html  docs.html  index.html  meeting_form.html  meetings.html  note_form.html  notes.html  result.html  week.html
tests/: test_ai_briefer.py  test_config.py  test_event_processor.py  test_meeting_store.py  test_models.py  test_outlook_client.py  test_university_events.py
